Added filter and sort
